Initial commit of CW2_CST1510_M01041173

--- a/Week08_Lab.ipynb
+++ b/Week08_Lab.ipynb
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "id": "install",
    "metadata": {},
    "outputs": [
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "imports_code",
    "metadata": {},
    "outputs": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "connect_func",
    "metadata": {},
    "outputs": [],
@@ -566,7 +566,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "create_users_table",
    "metadata": {},
    "outputs": [],
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "create_domain_tables_code",
    "metadata": {},
    "outputs": [],
@@ -773,7 +773,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "migrate_users",
    "metadata": {},
    "outputs": [],
@@ -835,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "verify_migration_code",
    "metadata": {},
    "outputs": [
@@ -846,17 +846,14 @@
       " Users in database:\n",
       "ID    Username        Role      \n",
       "-----------------------------------\n",
-      "1     Alice           admin     \n",
-      "2     Brian           analyst   \n",
-      "3     Emma            user      \n",
-      "4     Albert          user      \n",
-      "5     Peter           admin     \n",
-      "6     Nathan          analyst   \n",
-      "7     Micheal         admin     \n",
-      "8     test_user       user      \n",
-      "9     Larry           user      \n",
+      "1     Alcie           admin     \n",
+      "2     Adam            user      \n",
+      "3     Brian           analyst   \n",
+      "4     test_user       user      \n",
+      "5     alice           analyst   \n",
+      "6     Shophie         user      \n",
       "\n",
-      "Total users: 9\n"
+      "Total users: 6\n"
      ]
     }
    ],
@@ -900,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "register_func",
    "metadata": {},
    "outputs": [],
@@ -960,7 +957,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "login_func",
    "metadata": {},
    "outputs": [],
@@ -1023,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "load_csv_func",
    "metadata": {},
    "outputs": [],
@@ -1102,7 +1099,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "create_incident",
    "metadata": {},
    "outputs": [],
@@ -1154,7 +1151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "13df631a",
    "metadata": {},
    "outputs": [],
@@ -1188,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "update_incident",
    "metadata": {},
    "outputs": [],
@@ -1240,7 +1237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "delete_incident",
    "metadata": {},
    "outputs": [],
@@ -1292,7 +1289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "analytical_queries",
    "metadata": {},
    "outputs": [
@@ -1408,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "id": "complete_setup",
    "metadata": {},
    "outputs": [
@@ -1431,14 +1428,9 @@
       "𝄜 'it_tickets' table created successfully!\n",
       "\n",
       "[3/5] Migrating users from users.txt...\n",
-      "𝄜 Users table created successfully!\n",
-      "Username 'Alice' already exists.\n",
+      "Username 'Alcie' already exists.\n",
+      "Username 'Adam' already exists.\n",
       "Username 'Brian' already exists.\n",
-      "Username 'Emma' already exists.\n",
-      "Username 'Albert' already exists.\n",
-      "Username 'Peter' already exists.\n",
-      "Username 'Nathan' already exists.\n",
-      "Username 'Micheal' already exists.\n",
       "✅ Migrated 0 users from users.txt\n",
       "       Migrated None users\n",
       "\n",
@@ -1450,10 +1442,10 @@
       " Database Summary:\n",
       "Table                     Row Count      \n",
       "----------------------------------------\n",
-      "users                     9              \n",
+      "users                     6              \n",
       "cyber_incidents           101            \n",
-      "datasets_metadata         61             \n",
-      "it_tickets                8469           \n",
+      "datasets_metadata         63             \n",
+      "it_tickets                8471           \n",
       "\n",
       "============================================================\n",
       " DATABASE SETUP COMPLETE!\n",
@@ -1544,7 +1536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "comprehensive_test",
    "metadata": {},
    "outputs": [
@@ -1558,13 +1550,7 @@
       "============================================================\n",
       "\n",
       "[TEST 1] Authentication\n",
-      "  Register: ❌ Username 'test_user' already exists.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "  Register: ❌ Username 'test_user' already exists.\n",
       "  Login:    ✅ Welcome, test_user!\n",
       "\n",
       "[TEST 2] CRUD Operations\n",
